--- a/content/os-in-school/index.html
+++ b/content/os-in-school/index.html
@@ -5,58 +5,58 @@ layout: course
 <p class="audience">egyetemi hallgatók</p>
 <p class="goal"></p>
 
-<h2>Előadás</h2>
+<h2 class="both">Előadás</h2>
 <p><a href="history-of-os.html" target="_self">Számítástechnika és operációs rendszerek története</a></p>
-<h3>Gyakorlat</h3>
+<h3 class="both">Gyakorlat</h3>
 <p><a href="/files/oprend/requirements.pdf">Követlemények és bevezetés</a><br/>
 <a href="partition.html" target="_self">Particionálás alapjai és elmélete</a></p>
 
-<h2>Előadás</h2>
+<h2 class="both">Előadás</h2>
 <p><a href="virtualization.html" target="_self">Virtualizáció</a><br/>
 </p>
-<h3>Gyakorlat</h3>
+<h3 class="both">Gyakorlat</h3>
 <p>Készítsünk egy virtuális gépet<br/>
 Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</p>
 
-<h2>Előadás</h2>
+<h2 class="both">Előadás</h2>
 <p><a href="linux.html">Linux alapú operációs rendszerek története</a></p>
-<h3>Gyakorlat</h3>
+<h3 class="both">Gyakorlat</h3>
 <p>Telepítsünk egy Ubuntu (Linux) operációs rendszert (második rész)<br/>
 Ismerkedés a Linuxxal</p>
 
-<h2>Előadás</h2>
+<h2 class="both">Előadás</h2>
 <p><a href="windows.html">Microsoft operációs rendszerek története</a></p>
-<h3>Gyakorlat</h3>
+<h3 class="both">Gyakorlat</h3>
 <p><a href="win10boot_usb.html">Windows 10 telepítés pendrive-ról</a></p>
 
-<h2>Előadás</h2>
+<h2 class="both">Előadás</h2>
 <p>Ubuntu Server telepítése</p>
-<h2>Gyakorlat</h2>
+<h2 class="both">Gyakorlat</h2>
 <p><a href="virtualbox-network.html">VirtualBox hálózati beállítások</a></p>
 <p><a href="remote.html">Távoli elérést biztosító megoldások és eszközök</a></p>
 
-<h2>Előadás</h2>
+<h2 class="day">Előadás</h2>
 <p><a href="docker.html">Docker alpismeretek</a></p>
-<h2>Gyakorlat</h2>
+<h2 class="day">Gyakorlat</h2>
 <p>Docker bemutatása a <a href="https://projects.eclipse.org/projects/technology.scava">SCAVA</a> ipari projekten keresztül</p>
 
-<h2>Előadás</h2>
+<h2 class="both">Előadás</h2>
 <p><a href="https://en.wikipedia.org/wiki/Filesystem_Hierarchy_Standard">Filesystem Hierarchy Standard</a></p>
-<h2>Gyakorlat</h2>
+<h2 class="both">Gyakorlat</h2>
 <p><a href="lamp.html">LAMP</a></p>
 
-<h2>Előadás</h2>
+<h2 class="day">Előadás</h2>
 <p>Ismétlés és összefoglalás</p>
-<h2>Gyakorlat</h2>
+<h2 class="day">Gyakorlat</h2>
 <p>Konzultáció</p>
 
-<h2>Előadás és Gyakorlat</h2>
+<h2 class="both">Előadás és Gyakorlat</h2>
 <p>Zárthelyi dolgozat</p>
 
-<h2>Előadás és Gyakorlat</h2>
+<h2 class="both">Előadás és Gyakorlat</h2>
 <p>Projekt bemutatás</p>
 
-<h2>Előadás</h2>
+<h2 class="day">Előadás</h2>
 <p>Speciális operációs rendszerek
 <ul>
 	<li>Android</li>
