--- a/content/os-in-school/index.html
+++ b/content/os-in-school/index.html
@@ -22,7 +22,7 @@ Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</p>
 <p><a href="linux.html">Linux alapú operációs rendszerek története</a></p>
 <h3 class="both">Gyakorlat</h3>
 <p>Telepítsünk egy Ubuntu (Linux) operációs rendszert (második rész)<br/>
-Ismerkedés a Linuxxal</p>
+<a href="linux-intro.html" target="_self">Ismerkedés a Linuxxal</a></p>
 
 <h2 class="both">Előadás</h2>
 <p><a href="windows.html">Microsoft operációs rendszerek története</a></p>
