--- a/content/os-in-school/virtualbox-network.html
+++ b/content/os-in-school/virtualbox-network.html
@@ -64,11 +64,11 @@ layout: course
                 <span class="bold"><strong>VM&#8592;Net/LAN</strong></span>
               </p></th></tr></thead><tbody valign="middle"><tr><td align="left"><p>
                 Host-only
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
               </p></td><td align="center"><p>
                 &#8211;
@@ -80,7 +80,7 @@ layout: course
                 &#8211;
               </p></td><td align="center"><p>
                 &#8211;
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
               </p></td><td align="center"><p>
                 &#8211;
@@ -88,37 +88,37 @@ layout: course
                 &#8211;
               </p></td></tr><tr><td align="left"><p>
                 Bridged
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
               </p></td></tr><tr><td align="left"><p>
                 NAT
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
               </p></td><td align="center"><p>
                 <a href="ch06.html#natforward" title="6.3.1. Configuring Port Forwarding with NAT">Port forward</a>
               </p></td><td align="center"><p>
                 &#8211;
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
               </p></td><td align="center"><p>
                 <a href="ch06.html#natforward" title="6.3.1. Configuring Port Forwarding with NAT">Port forward</a>
               </p></td></tr><tr><td align="left"><p>
                 NATservice
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <a href="ch06.html#network_nat_service" title="6.4. Network Address Translation Service">Port forward</a>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
-              </p></td><td align="center"><p>
+              </p></td><td align="center" style="background-color:green"><p>
                 <span class="bold"><strong>+</strong></span>
               </p></td><td align="center"><p>
                 <a href="ch06.html#network_nat_service" title="6.4. Network Address Translation Service">Port forward</a>
