--- a/content/os-in-school/remote.html
+++ b/content/os-in-school/remote.html
@@ -39,6 +39,7 @@ layout: course
 <pre class="code"><code>sudo apt install net-tools</code></pre>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/QcKYFEgfV-I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <pre class="code"><code>sftp sftpuser@10.10.10.1</code></pre>
+<a href="https://www.tecmint.com/sftp-command-examples/">10 sFTP Command Examples to Transfer Files on Remote Servers in Linux</a>
 
 <h2>Samba</h2>
 <p><a href="https://tutorials.ubuntu.com/tutorial/install-and-configure-samba#0">Install and Configure Samba</a></p>
