new, merged PGP content, mixed Python and Cypher to motivate students

--- a/content/teaching.html
+++ b/content/teaching.html
@@ -25,9 +25,7 @@ layout: page
 
 <h3>PGP - Python, Gráfok, Programozás</h3>
 <p>
-<a href="/content/pgp/secondary-2h.html" target="_self">középiskolások számára (2 óra)</a>
-<a href="/content/pgp/secondary-4h.html" target="_self">középiskolások számára (4 óra)</a>
-<a href="/content/pgp/secondary-halfyear.html" target="_self">középiskolások számára (fél év)</a>
+<a href="/content/pgp/secondary.html" target="_self">középiskolások számára</a>
 </p>
 
 <h3>Rendszerfejlesztés 2. gyakorlat</h3>
