--- a/content/pgp/secondary.html
+++ b/content/pgp/secondary.html
@@ -242,7 +242,7 @@ def get_genre_of(title):
   return names
 </code></pre>
 
-<img src="/content/pgp/paramter-python-cyper.png"/>
+<img src="/content/pgp/paramter-python-cyper.png" style="width: 300px" />
 
 <h2>Halmazelméleti alapok</h2>
 
