adding real life examples

--- a/content/pgp/secondary.html
+++ b/content/pgp/secondary.html
@@ -15,6 +15,16 @@ easy_install neo4j-driver
 
 <h2>Mit csinál egy informatikus (szoftverfejlesztő)?</h2>
 <p class="overview">A tanulók saját tapasztalatai alpján felsoroljuk és megismerjük az informatika szakterületeit.</p>
+<p>Egy szoftverfejlesztő mindig elég lusta ahoz, hogy napokat töltsön egy szoftver elkészítésével ami megold egy 10 perces feladatot helyette.</p>
+<p>A szoftverfejlesztés nem csak egy munka: 
+<ul>
+	<li><a href="https://github.com/geryxyz/bibHygeia">referenciák rendbe rakása</a></li>
+	<li><a href="https://gist.github.com/geryxyz/030d5b466a2a9f7409b9776cc98a313a">marógép sebességének állítása</a></li>
+	<li><a href="https://gist.github.com/geryxyz/b228d6535f5271aea6684f733d1d4380">algoritmikus nyuszik</a></li>
+	<li><a href="https://en.wikipedia.org/wiki/History_of_Linux#The_creation_of_Linux">Linux operációs rendszer</a></li>
+</ul>
+</p>
+<p>
 <ul>
   <li>folyamat tervezés</li>
   <li>adatszerkezet tervezés</li>
@@ -22,6 +32,7 @@ easy_install neo4j-driver
   <li>tesztelés</li>
   <li>hibajavítás</li>
 </ul>
+</p>
 
 <h2>Mi az a szkript nyelv?</h2>
 <p>Python alapok: parancssoron keresztül néhány példa a szintaxisról</p>
