--- a/content/pgp/secondary.html
+++ b/content/pgp/secondary.html
@@ -25,10 +25,11 @@ easy_install neo4j-driver
 </ul>
 </p>
 <p>
+A szofverfejlesztés részei:
 <ul>
   <li>folyamat tervezés</li>
   <li>adatszerkezet tervezés</li>
-  <li>fejlesztés (kódolás)</li>
+  <li>kódolás</li>
   <li>tesztelés</li>
   <li>hibajavítás</li>
 </ul>
