wsl theory added

--- a/content/os-in-school/index.html
+++ b/content/os-in-school/index.html
@@ -35,6 +35,11 @@ Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</p>
 <p><a href="virtualbox-network.html">VirtualBox hálózati beállítások</a></p>
 <p><a href="remote.html">Távoli elérést biztosító megoldások és eszközök</a></p>
 
+<h2 class="both">Előadás</h2>
+<p>Windows Subsystem for Linux alapjai</p>
+<h2 class="both">Gyakorlat</h2>
+<p><a href="wsl.html">Windows Subsystem for Linux a gyakorlatban</a></p>
+
 <h2 class="day">Előadás</h2>
 <p><a href="docker.html">Docker alpismeretek</a></p>
 <h2 class="day">Gyakorlat</h2>
