--- a/content/os-in-school/wsl.html
+++ b/content/os-in-school/wsl.html
@@ -11,9 +11,9 @@ layout: course
 
 <h2>Elméleti alapok</h2>
 
-<img src="operating_system.png" style="width: 20%"/><br/>
-<a href="https://www.slideshare.net/WindowsDev/build-2017-b8113-using-the-windows-subsystem-for-linux-and-the-windows-console-for-a-next-generation-developmentexperience">forrás</a>
+<img src="nowsl.png" style="width: 40%"/><br/>
+<img src="wsl1.png" style="width: 40%"/><br/>
+<img src="wsl2.png" style="width: 40%"/><br/>
 
-<img src="nowsl.png" style="width: 20%"/><br/>
-<img src="wsl1.png" style="width: 20%"/><br/>
-<img src="wsl2.png" style="width: 20%"/><br/>
+<a href="https://www.slideshare.net/WindowsDev/build-2017-b8113-using-the-windows-subsystem-for-linux-and-the-windows-console-for-a-next-generation-developmentexperience">forrás</a><br/>
+<img src="wsl_process.jpg" style="width: 40%"/><br/>
