--- a/content/os-in-school/wsl.html
+++ b/content/os-in-school/wsl.html
@@ -17,3 +17,7 @@ layout: course
 
 <a href="https://www.slideshare.net/WindowsDev/build-2017-b8113-using-the-windows-subsystem-for-linux-and-the-windows-console-for-a-next-generation-developmentexperience">forrás</a><br/>
 <img src="wsl_process.jpg" style="width: 40%"/><br/>
+
+<h2>WSL telepítése</h2>
+
+<p>Vezérlőpult > Programok > Windows szolgáltatások be- és kikapcsolása > Linuxos Windows-alrendszer és Virtuális gép platformja</p>
