--- a/content/os-in-school/wsl.html
+++ b/content/os-in-school/wsl.html
@@ -11,13 +11,45 @@ layout: course
 
 <h2>Elméleti alapok</h2>
 
+<p>WSL nélkül</p><br/>
 <img src="nowsl.png" style="width: 40%"/><br/>
+<p>WSL 1</p><br/>
 <img src="wsl1.png" style="width: 40%"/><br/>
+<p>WSL 2</p><br/>
 <img src="wsl2.png" style="width: 40%"/><br/>
 
-<a href="https://www.slideshare.net/WindowsDev/build-2017-b8113-using-the-windows-subsystem-for-linux-and-the-windows-console-for-a-next-generation-developmentexperience">forrás</a><br/>
+<p>WSL programok futtatása</p><a href="https://www.slideshare.net/WindowsDev/build-2017-b8113-using-the-windows-subsystem-for-linux-and-the-windows-console-for-a-next-generation-developmentexperience">forrás</a><br/>
 <img src="wsl_process.jpg" style="width: 40%"/><br/>
 
-<h2>WSL telepítése</h2>
+<h2>Telepítés</h2>
 
-<p>Vezérlőpult > Programok > Windows szolgáltatások be- és kikapcsolása > Linuxos Windows-alrendszer és Virtuális gép platformja</p>
+<h3>WSL telepítése</h3>
+<p>Vezérlőpult > Programok > Windows szolgáltatások be- és kikapcsolása > Linuxos Windows-alrendszer és Virtuális gép platformja (WSL2-höz)</p>
+
+<h3>Linux disztribúció telepítése</h3>
+<p>Microsoft Store > Keresés: "linux" > distribúció választása > telepítés</p>
+
+<h2>Használat</h2>
+
+<h3>Indítás</h3>
+<ul>
+	<li>start menüből</li>
+	<li>Windows Intéző kontext menüből</li>
+</ul>
+
+<h2>Ismerkedés</h2>
+
+<h3>Hol vagyok?</h3>
+<p>Ennek a Linux disztribúciójának a fájlrendszerében...</p>
+<p>Van-e kapcsolat/átjárás a különböző disztribúciók között? Próbáljuk ki! (Debián telepítése, ...)</p>
+
+<h3>Hol vannak a fájlaim?</h3>
+<p>/mnt/c... (df -h)</p>
+
+<h3>Mit csinálhatok?</h3>
+<p>Nézzük meg milyen folyamatok futnak egy "teljes" és egy WSL Linux környezetben. Hasonlítsuk össze a korábban telepített VM gép folyamataival htop segítségével. (minimalista telepítés)</p>
+<p>Környezet verziójának lekérdezése: more /etc/os-release</p>
+<p>WSL környezetek/disztribúciók listázása: TODO</p>
+
+<h3>Mire használhatom?</h3>
+<p>megbeszélés: oktatásban, munkában, magán célra?</p>
