--- a/content/os-in-school/wsl.html
+++ b/content/os-in-school/wsl.html
@@ -11,15 +11,15 @@ layout: course
 
 <h2>Elméleti alapok</h2>
 
-<p>WSL nélkül</p><br/>
-<img src="nowsl.png" style="width: 40%"/><br/>
-<p>WSL 1</p><br/>
-<img src="wsl1.png" style="width: 40%"/><br/>
-<p>WSL 2</p><br/>
-<img src="wsl2.png" style="width: 40%"/><br/>
+<p>WSL nélkül<br/>
+<img src="nowsl.png" style="width: 60%"/></p>
+<p>WSL 1<br/>
+<img src="wsl1.png" style="width: 60%"/></p>
+<p>WSL 2<br/>
+<img src="wsl2.png" style="width: 60%"/></p>
 
-<p>WSL programok futtatása</p><a href="https://www.slideshare.net/WindowsDev/build-2017-b8113-using-the-windows-subsystem-for-linux-and-the-windows-console-for-a-next-generation-developmentexperience">forrás</a><br/>
-<img src="wsl_process.jpg" style="width: 40%"/><br/>
+<p>WSL programok futtatása <a href="https://www.slideshare.net/WindowsDev/build-2017-b8113-using-the-windows-subsystem-for-linux-and-the-windows-console-for-a-next-generation-developmentexperience">forrás</a><br/>
+<img src="wsl_process.jpg" style="width: 60%"/></p>
 
 <h2>Telepítés</h2>
 
