--- a/content/os-in-school/wsl.html
+++ b/content/os-in-school/wsl.html
@@ -49,7 +49,13 @@ layout: course
 <h3>Mit csinálhatok?</h3>
 <p>Nézzük meg milyen folyamatok futnak egy "teljes" és egy WSL Linux környezetben. Hasonlítsuk össze a korábban telepített VM gép folyamataival htop segítségével. (minimalista telepítés)</p>
 <p>Környezet verziójának lekérdezése: more /etc/os-release</p>
-<p>WSL környezetek/disztribúciók listázása: TODO</p>
+<p>Kernel verziójának lekérdezése: cat /proc/version <a href="https://docs.microsoft.com/en-us/windows/wsl/wsl2-kernel">Updating the WSL 2 Linux kernel</a> <a href="https://docs.microsoft.com/en-us/windows/wsl/wsl2-install">Installation Instructions for WSL 2</a></p>
+<ul>
+	<li>4.4 a WLS1-el kiadott verzió</li>
+	<li>4.19 a WLS1-el kiadott verzió</li>
+</ul>
+<p>WSL környezetek/disztribúciók listázása: wsl -l -v</p>
+<p>WSL környezetek/disztribúciók verziójának módosítása: wsl --set-version milyiket? mire?</p>
 
 <h3>Mire használhatom?</h3>
 <p>megbeszélés: oktatásban, munkában, magán célra?</p>
