vm and container metaphor

--- a/content/os-in-school/docker.html
+++ b/content/os-in-school/docker.html
@@ -5,8 +5,13 @@ layout: course
 
 <h2>Docker alapok</h2>
 
+<p><a href="https://docker-curriculum.com/">Docker for beginners</a>
 <img src="docker_vs_vm.png" style="width: 60%"/><br/>
+<img src="house_vs_office.png" style="width: 60%"/>
 <img src="docker_architecture.png" style="width: 60%"/><br/>
+</p>
+
+<p>Előre elkészített Docker image-k beszerezhetőek a <a href="https://hub.docker.com/search?q=&type=image">Docker Hub</a></p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/aLipr7tTuA4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
