adding microcontroller intro

--- a/content/os-in-school/index.html
+++ b/content/os-in-school/index.html
@@ -62,11 +62,4 @@ Telepítsünk egy Ubuntu (Linux) operációs rendszert (első rész)</p>
 <p>Projekt bemutatás</p>
 
 <h2 class="day">Előadás</h2>
-<p>Speciális operációs rendszerek
-<ul>
-	<li>Android</li>
-	<li>Rasberry PI</li>
-	<li>Arduino</li>
-	<li>NodeMCU</li>
-</ul>
-</p>
+<p>Ismerkedés a <a href="micro-electronics.html">mikro-elektronikával</a></p>
