--- a/content/pgp/secondary.html
+++ b/content/pgp/secondary.html
@@ -153,6 +153,15 @@ ORDER BY reviews DESC <span class="comment">//Order by number of reviews, in des
 LIMIT 5; <span class="comment">//Only return first five records</span>
         </pre></details>
       </li>
+      <li><details><summary>Gyakorló feladat</summary><ol>
+	      <li>Listázzuk ki hogy melyik felhasználó melyik filmet hányasra osztályozta.</li>
+	      <li>Listázzuk ki hogy ki hányasra rangsorolta az Matrix filmeket.</li>
+	      <li>Számoljuk össze hogy hány szavazat érkezett filmenként.</li>
+	      <li>Rendezzük sorba a filmeket szavazatok száma szerint.</li>
+	      <li>Csak a legtöbb szavazatot kapott filmet íratsuk is.</li>
+	      <li>Nevezzük el a visszadott mezőket.</li>
+	      </ol>
+	</li>
     </ul>
   </li>
   <li>minta illesztés</li>
