projects for research page

--- a/content/research.html
+++ b/content/research.html
@@ -13,7 +13,7 @@ layout: page
 	<p><a href="https://github.com/geryxyz">GitHub profile</a> <a href="https://scholar.google.com/citations?user=Xh0bbbQAAAAJ&hl=hu">Google Scholar profile</a> <a href="https://m2.mtmt.hu/gui2/?type=authors&mode=browse&sel=10055619">"Magyar Tudományos Művek Tára" profile</a> <a href="https://www.scopus.com/authid/detail.uri?authorId=55975863300">Scopus profile</a></p>
 </p>
 
-<h3>Topic of Interest</h3>
+<h3>Topics of Interest</h3>
 
 <h4>Productivity of Development Teams</h4>
 <p>Productivity describes various measures of the efficiency of production. We used the previously introduced definition of productivity, where it is expressed as the ratio of aggregate output to a single input or an aggregate input used in a production process, i.e., output per unit of input.</p>
@@ -48,3 +48,22 @@ underlying process of discrepancy analysis.</p>
 
 <p><span class="strong">Challenge of Program Structure Analysis.</span>
 Software development research often utilizes a comparison of various interconnected entities. For example, software analysis frequently relies on test-code connections, which are not always noted explicitly.</p>
+
+<h3>Projects</h3>
+<p class="center">
+	<div class="project">
+		<img class="logo" src="/content/research/codemetropolis.png"/><br/>
+		<a href="http://codemetropolis.github.io/CodeMetropolis/">CodeMetropolis</a><br/>
+		<span class="emph">See your software as never before.</span>
+	</div>
+	<div class="project">
+		<img class="logo" src="/content/research/bibHygeia.png"/><br/>
+		<a href="https://github.com/geryxyz/bibHygeia">bibHygeia</a><br/>
+		<span class="emph">Housekeeping for Bibtex Files</span>
+	</div>
+	<div class="project">
+		<img class="logo" src="/content/research/iFL4Eclipse.png"/><br/>
+		<a href="https://github.com/sed-szeged/iFL4Eclipse">iFL4Eclipse</a><br/>
+		<span class="emph">Interactive Fault Localization for Eclipse</span>
+	</div>
+</p>
