hobbies added to research page

--- a/content/research.html
+++ b/content/research.html
@@ -67,3 +67,11 @@ Software development research often utilizes a comparison of various interconnec
 		<span class="emph">Interactive Fault Localization for Eclipse</span>
 	</div>
 </p>
+
+<h3>Topics Outside the Profession and Hobbies</h3>
+
+<h4>Theoretical Linguistics</h4>
+<p>The branch of linguistics which inquires into the nature of language and seeks to answer fundamental questions as to what language is, or what the common ground of all languages is. The goal of theoretical linguistics can also be the construction of a general theoretical framework for the description of language.</p>
+
+<h4>Conlanging</h4>
+<p>Conlanging is creating constructed languages or conlangs, such as Esperanto, Dothraki, Lojban, or Klingon. One of its types is the artistic languages, or artlangs, which are constructed languages designed for aesthetic and phonetic pleasure. Some people prefer to take pleasure in constructing, crafting a language by a conscious decision for reasons of literary enjoyment or aesthetic reasons without any claim of usefulness.</p>
