--- a/content/teaching.html
+++ b/content/teaching.html
@@ -12,7 +12,7 @@ layout: page
 
 <h3>Operation systems in school - Operációs rendszerek az iskolában</h3>
 <p>
-<a href="/content/os-in-school/index.html" target="_self">Ütemterv és tananyag</a>
+<a href="https://okt.sed.hu/os-in-school/kovetelmenyek/" target="_self">Ütemterv és tananyag</a>
 </p>
 
 <br/>
