--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
-layout: page
+# You don't need to edit this file, it's empty on purpose.
+# Edit theme's home layout instead if you wanna make some changes
+# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
+layout: home
+author_profile: true
 ---
-<img class="ico" src="images/geryed.jpeg"/>
-<h1>Gergő <span class="emph">Gery</span> Balogh, Ph.D.</h1>
-<h2>Researcher and Software Engineer</h2>
-<p><a href="https://www.linkedin.com/in/geryxyz/">LinkedIn profile</a>
-<!--<p><span class="quote">"I don't know anything, but I do know that everything is interesting if you go into it deeply enough."</span></p>-->
